--- a/src/index.css
+++ b/src/index.css
@@ -22,11 +22,13 @@
 html,
 body,
 #root {
-  height: 100%;
+  min-height: 100%;
+  height: auto;
 }
 
 body {
   overflow-x: hidden;
+  overflow-y: auto;
   scrollbar-width: none;
 }
 
